--- a/conversaoData(1).html
+++ b/conversaoData(1).html
@@ -32,7 +32,7 @@
     }
 
     // Adicionando os dias do mês atual
-    dias_totais += dia - 1;
+    //dias_totais += dia + 1;
 
     alert("Número de dias desde 1 de janeiro de 1900: " + dias_totais);
 </script>
